infra/terraform/elastic_ip.tf
resource "aws_eip" "cms_eip" {
  instance = aws_instance.cms.id
  vpc      = true
}
